Fix up the image cropping

--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,7 @@ a:hover {
   width: 50px;
   height: 50px;
   display: inline-block;
+  object-fit: cover;
 }
 
 footer {
